detail fix
for mobile view and JSON makes the width gets overflowed, loading/error font style changed, NO DATA added

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
 .App {
-  padding: 10px;
+  padding: 15px;
   max-width: 70%;
+  background-color: rgba(4,228,153, 0.025);
+  border-radius: 10px;
+  border: 1px solid rgba(4,228,153, 0.3);
+  margin-bottom: 30px;
+}
+
+.message-grid {
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 768px) {
